trunk/Archive2/c2/6aacf96e134d7b/output
main.cpp:34:45: error: expected ')'
    std::printf("Largest 32-bit value is %" PRIu32 " or %#" PRIx32 "\n", val, val);
                                            ^
main.cpp:34:16: note: to match this '('
    std::printf("Largest 32-bit value is %" PRIu32 " or %#" PRIx32 "\n", val, val);
               ^
1 error generated.
